--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Command line TODO list",
   "main": "index.js",
   "dependencies": {
-    "ky": "^0.3.0",
+    "axios": "^0.18.0",
+    "ora": "^3.0.0",
+    "prompts": "^1.1.1",
     "vorpal": "^1.12.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node --experimental-modules index.js"
   },
   "repository": {
     "type": "git",
