--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "prompts": "^1.1.1",
     "vorpal": "^1.12.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^5.6.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --experimental-modules index.js"
