Add ESLint override for no-console

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,15 @@
         "semi": [
             "error",
             "always"
+        ],
+        "keyword-spacing": [
+          "error"
         ]
+    },
+    "overrides": {
+      "files": ["*.js"],
+      "rules": {
+        "no-console": "off"
+      }
     }
 }
