--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.18.0",
+    "cli-table": "^0.3.1",
     "netrc-parser": "^3.1.6",
     "ora": "^3.0.0",
     "prompts": "^1.1.1",
